# roku-shell

./: README.md  pyproject.toml
src/roku_shell/: cli.py  config.py  ecp.py
tests/: test_ecp.py
