[project]
name= "roku-shell"
version= "0.1.0"
description= "Roku remote for the command line written in python"
requires-python= ">=3.11"
dependencies= [
  "requests",
  "typer",
  "rich",
]

[project.scripts]
roku-shell = "roku_shell.cli:app"

[build-system]
requires= ["hatchling"]
build-backend = "hatchling.build"


